src/assets/css/style.css
/* ... */
.doc-loader img {
  width: 100px;
  height: 100px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.content-1170 {
  width: 1170px;
  max-width: 95%;
}

.content-740 {
  width: 740px;
  max-width: 95%;
}

.content-570 {
  width: 570px;
  max-width: 95%;
}

.pagination-holder {
  margin: 60px 0;
}

.vertical-aligned-logo .pagination-holder {
  margin-bottom: 160px;
}

.section {
  position: relative;
}

.section-wrapper {
  position: relative;
  padding: 135px 0;
}

.animate {
  opacity: 0;
  transition: 0.3s ease-in;
  transform: translate(0px, 70px);
}

.animate.show-it {
  opacity: 1;
  transform: translate(0px, 0px);
}

.white-text {
  color: #fff !important;
}

.big-title {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-size: 46px;
  line-height: 133%;
  color: #264549;
}

.site-description {
  font-size: 24px;
  line-height: 150%;
  color: #214b51;
  margin-bottom: 0;
  padding-bottom: 30px;
}

p.up-title-text {
  font-family: "Roboto", sans-serif;
  font-size: 90px;
  font-weight: 100;
  color: #dc6041;
  line-height: 100%;
  margin-bottom: 0;
  height: 58px;
  overflow: hidden;
}

p.page-description {
  color: #264549;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 1px;
  margin-top: -5px;
}

.info-code-title {
  font-size: 16px;
  color: #000;
  letter-spacing: 2px;
  margin-bottom: 0;
  line-height: 120%;
}

.info-code-content,
.info-code-content a {
  color: #b3b3b3;
  margin-bottom: 30px;
}

.medium-text {
  font-family: "Roboto", sans-serif;
  color: #031e23;
  font-size: 42px;
  line-height: 112%;
  font-weight: 700;
  padding: 0 0 10px;
}

.small-text {
  font-size: 22px;
  line-height: 130%;
  color: #dc6041;
  padding-bottom: 10px;
}

.isotope.no-transition,
.isotope.no-transition .isotope-item,
.isotope .isotope-item.no-transition {
  transition-duration: 0s;
}

.page-title-holder {
  margin-bottom: 75px;
}

.section h1.entry-title:not(.big-title),
.section h2.entry-title {
  font-family: "Roboto", sans-serif;
  font-size: 30px;
  line-height: 150%;
  font-weight: 300;
  word-break: break-word;
  color: #264549;
  letter-spacing: 5px;
  padding: 0;
}

.page .page-content {
  background-color: #fff;
  padding: 75px;
}

/* ===================================
    2.1 Button CSS
====================================== */

a.button {
  font-family: "Roboto", sans-serif;
  font-size: 14px;
  line-height: 14px;
  font-weight: 700;
  color: #fff;
  background-color: #dc6041;
  border: 2px solid #dc6041;
  display: inline-block;
  text-align: center;
  padding: 27px 40px;
  cursor: pointer;
  vertical-align: middle;
  text-decoration: none;
  transition: all 0.2s linear;
  margin-bottom: 17px;
  letter-spacing: 2px;
}

a.button:hover {
  background-color: #fff;
  color: #dc6041;
}

/* ===================================
    2.2 Image/Text Slider CSS
====================================== */

.image-slider-wrapper {
  margin-bottom: 20px;
}

.single-content-wrapper .image-slider-wrapper {
  margin-bottom: 10px;
}

.single-post-header-content .image-slider-wrapper {
  margin-bottom: 0;
}

.owl-carousel .owl-stage-outer {
  height: auto !important;
}

.owl-theme .owl-dots {
  padding-top: 25px;
  line-height: 0;
}

.owl-theme .owl-dots .owl-dot span {
  margin: 0;
  background-color: rgba(255, 255, 255, 0.5);
  transition: all 0.2s ease;
  width: 17px;
  height: 17px;
  border-radius: 90%;
}

.owl-theme .owl-dots .owl-dot {
  transition: all 0.3s ease;
  border: 2px solid #dc6041;
  margin: 3px;
  border-radius: 90%;
}

.owl-theme .owl-dots .owl-dot:hover span {
  background-color: #fff;
}

.owl-theme .owl-dots .owl-dot.active {
  background-color: #dc6041;
}

.owl-theme .owl-dots .owl-dot.active span {
  background-color: transparent;
}

.text-slider-wrapper {
  font-size: 24px;
  line-height: 35px;
  padding: 0 50px;
  color: #fff;
}

.text-slider-header-quotes {
  /* background-image: url(images/quotes_image.png); */
  /* background-repeat: no-repeat; */
  width: 50px;
  height: 50px;
  /* background-size: cover; */
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 60px;
}

.text-slider-wrapper .text-slide {
  font-size: 26px;
  line-height: 170%;
  overflow: hidden;
  max-width: 960px;
  text-align: center;
  margin: 0 auto;
}

.text-slider-wrapper .text-slide:after {
  content: "";
  display: table;
  clear: both;
}

.text-slider-wrapper .text-slide-name {
  font-family: "Roboto", sans-serif;
  font-size: 20px;
  font-weight: 700;
  line-height: 100%;
  margin: 5px 0;
}

.text-slider-wrapper .text-slide-position {
  font-size: 18px;
  line-height: 100%;
  letter-spacing: 4px;
  color: #fff;
  margin: 0;
  padding-left: 4px;
}

.text-slider-wrapper img.text-slide-img {
  width: 70px !important;
  height: 70px;
  border-radius: 90%;
  display: inline-block;
}

.text-slide-content {
  margin-bottom: 60px;
  font-style: italic;
}

.text-slider-wrapper .owl-nav {
  margin-top: 45px;
}

.text-slider-wrapper .owl-theme .owl-prev {
  background-image: url("images/nav_left.png") !important;
  background-color: transparent !important;
  font-size: 0;
  width: 30px;
  padding: 0;
  height: 30px;
  background-repeat: no-repeat !important;
  background-size: 30px !important;
  transition: 0.3s;
  opacity: 0.7;
  margin-right: 15px;
}

.text-slider-wrapper .owl-theme .owl-prev:hover {
  opacity: 1;
}

.text-slider-wrapper .owl-theme .owl-next {
  background-image: url("images/nav_right.png") !important;
  background-color: transparent !important;
  font-size: 0;
  width: 30px;
  padding: 0;
  height: 30px;
  background-repeat: no-repeat !important;
  background-size: 30px !important;
  transition: 0.3s;
  opacity: 0.7;
  margin-left: 15px;
}

.text-slider-wrapper .owl-theme .owl-next:hover {
  opacity: 1;
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}
/* ... */

